add icon buttom language

--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -1,12 +1,12 @@
 {
-    "MyProfile" : "ملفى",
-     "WessamElsayed" : "وسام السيد",
+    "MyProfile" : "ملفى الشخصى",
+    "WessamElsayed" : "وسام السيد",
     "General" : "عام",
-    "Support" : "دعم",
-    "MyOrders" : "طلبات",
+    "Support" : "الدعم",
+    "MyOrders" : "طلباتى",
     "Location" : "الموقع",
-    "ScanQrCode" :" مسح رمز الاستجابة",
-    "PickUpLocation" : "موقع الشحن",
+    "ScanQrCode" :" مسح QR ",
+    "PickUpLocation" : "موقع الاستلام",
     "ChangePassword" : "تغيير كلمة المرور",
     "NeedHelp?" : "مساعدة",
     "ProtectionGurantee" : "ضمان الحماية",
